--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.Demo2"
         tools:targetApi="31">
         <activity
+            android:name=".ServiceActivity"
+            android:exported="false" />
+        <activity
             android:name=".TestViewActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,6 +27,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".Service.CalculatorService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.demo2.IMyAidlInterface" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
