--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,4 +21,5 @@ swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefre
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 
